@@ -1,3 +1,9 @@
+Thu Aug 28 07:04:19 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * dds/DCPS/BitPubListenerImpl.cpp:
+
+          Move log message to higher level
+
 Wed Aug 27 19:39:07 UTC 2014  Byron Harris  <harrisb@ociweb.com>
 
         * tests/DCPS/CompatibilityTest/subscriber.cpp:
